Rel notes_4_17: Storage content

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -550,6 +550,76 @@ For more information, see xref:../registry/configuring_registry_storage/configur
 [id="ocp-4-17-storage_{context}"]
 === Storage
 
+[id="ocp-4-17-storage-efs-vol-metrics"]
+==== AWS EFS CSI storage usage metrics is generally available
+Amazon Web Services (AWS) Elastic File Service (EFS) usage metrics allow you to monitor how much space is used by EFS volumes. This feature is generally available.
+
+[IMPORTANT]
+====
+Turning on these metrics can lead to performance degradation because the CSI driver walks through the whole volume. Therefore, this option is disabled by default. Administrators must explicitly enable this feature.
+====
+
+For more information, see xref:../storage/container_storage_interface/persistent-storage-csi-aws-efs.adoc#aws-efs-storage-csi-usage-metrics[Amazon Elastic File CSI Storage usage metrics].
+
+[id="ocp-4-17-storage-control-vol-mode-conversion"]
+==== Preventing unauthorized volume mode conversion is generally available
+Previously, there was no validation of whether the mode of an original volume (filesystem or raw block), whose snapshot was taken, matches the mode of a newly created volume. This presented a security gap that could allow malicious users to potentially exploit an as-yet-unknown vulnerability in the host operating system.
+
+Nevertheless, some users have a legitimate need to perform such conversions. This feature allows cluster administrators to provide these rights (ability to perform update or patch operations on `VolumeSnapshotContents objects`) only to trusted users or applications, such as backup vendors.
+
+To convert a volume mode, an authorized user needs to change `snapshot.storage.kubernetes.io/allow-volume-mode-change: "true"` for VolumeSnapshotContent of the snapshot source.
+
+This feature is supported as generally available.
+
+[id="ocp-4-17-storage-auto-del-resources-gcp-filestore"]
+==== Automatic deletion of resources for GCP Filestore is generally available
+In earlier versions of {product-title}, when destroying a cluster, Google Compute Platform (GCP) Filestore Storage did not delete all of the cloud resources belonging to that cluster. This required manually deleting all of the persistent volume claims (PVCs) that used the Filestore storage class before destroying the cluster.
+
+With {product-title} 4.17, when destroying a cluster the {product-title} installer should generally delete all of the cloud resources that belong to that cluster, and therefore manual deletion of PVCs should not be required. However, due to the special nature of the Google Compute Platform (GCP) Filestore resources, the automated cleanup process might not remove all of the resources in some rare cases. This feature is supported as generally available.
+
+For more information, see xref:../storage/container_storage_interface/persistent-storage-csi-google-cloud-file.adoc#persistent-storage-csi-google-cloud-file-delete-instances_persistent-storage-csi-google-cloud-file[Destroying clusters and GCP Filestore].
+
+[id="ocp-4-17-storage-azure-file-snapshot"]
+==== Azure File CSI supports snapshots (Technology Preview)
+{product-title} 4.17 introduces volume snapshot support for the Microsoft Azure File Container Storage Interface (CSI) Driver Operator. This capability is supported as a Technology Preview feature.
+
+For more information, see xref:../storage/container_storage_interface/persistent-storage-csi.adoc#csi-drivers-supported_persistent-storage-csi[CSI drivers supported by {product-title}] and xref:../storage/container_storage_interface/persistent-storage-csi-snapshots.adoc[CSI volume snapshots].
+
+[id="ocp-4-17-storage-multi-vcenter-support"]
+==== Multiple vCenter support for vSphere CSI (Technology Preview)
+{product-title} v4.17 introduces the ability to deploy {product-title} across multiple vSphere clusters (vCenters). This feature is supported with Technology Preview status.
+
+Multiple vCenters can only be configured during installation. The maximum number of supported vCenter clusters is three.
+
+For more information, see xref:../storage/container_storage_interface/persistent-storage-csi-vsphere.adoc#persistent-storage-csi-vsphere-multi-vcenter-support-overview_persistent-storage-csi-vsphere[Multiple vCenter support for vSphere CSI] and xref:../installing/installing_vsphere/installation-config-parameters-vsphere.adoc[Installation configuration parameters for vSphere].
+
+[id="ocp-4-17-storage-disabling-storage-vsphere"]
+==== Disabling and enabling storage on vSphere (Technology Preview)
+Cluster administrators might want to disable the VMWare vSphere Container Storage Interface (CSI) Driver as a Day 2 operation, so the vSphere CSI Driver does not interface with your vSphere setup. This feature is supported at the Technology Preview level.
+
+For more information, see xref:../storage/container_storage_interface/persistent-storage-csi-vsphere.adoc#persistent-storage-csi-vsphere-disable-storage-overview_persistent-storage-csi-vsphere[Disabling and enabling storage on vSphere].
+
+[id="ocp-4-17-storage-selinuxmount-dev-preview"]
+==== RWX/RWO SELinux Mount (Developer Preview)
+Pods might take a very long time to start when the volume contains a large number of files. To avoid SELinux labeling issues while keeping SELinux confining, you can enable the ReadWriteMany/ReadWriteOnce (RWX/RWO) SELinux Mount feature. Be advised that the RWX/RWO SELinux Mount feature is a Developer Preview feature. It is not supported by Red Hat, and you should not enable this feature set on production or clusters that you plan to maintain over time.
+
+:FeatureName: RWX/RWO SELinux Mount
+include::snippets/developer-preview.adoc[]
+
+For more information about the RWX/RWO SELinux Mount feature, including how to enable it, see link:https://access.redhat.com/articles/7087028[RWX/RWO SELinux Mount feature Knowledge Centered Service article].
+
+[id="ocp-4-17-storage-migrating-cns-vols-between-datastores-dev-preview"]
+==== Migrating CNS volumes between datastores with cns-migration (Developer Preview)
+In {product-title} 4.17, if you are running out of space in your current datastore, or want to move to a more performant datastore, you can migrate volumes between datastores. Be advised that this feature is a Developer Preview feature. It is not supported by Red Hat.
+
+:FeatureName: Migrating CNS Volumes Between Datastores
+include::snippets/developer-preview.adoc[]
+
+For more information about cns-migration, see link:https://github.com/openshift/vmware-vsphere-csi-driver-operator/blob/master/docs/cns-migration.md[Moving CNS volumes between datastores].
+
+[id="ocp-4-17-oci"]
+=== {oci-first}
+
 [id="ocp-4-17-oci_{context}"]
 === Oracle(R) Cloud Infrastructure
 
@@ -864,11 +934,6 @@ In the following tables, features are marked with the following statuses:
 [cols="4,1,1,1",options="header"]
 |====
 |Feature |4.15 |4.16 |4.17
-
-|Persistent storage using FlexVolume
-|Deprecated
-|Deprecated
-|Deprecated
 
 |AliCloud Disk CSI Driver Operator
 |General Availability
@@ -1285,9 +1350,19 @@ In the following tables, features are marked with the following statuses:
 |====
 |Feature |4.15 |4.16 |4.17
 
+|AWS EFS storage CSI usage metrics
+|Not Available
+|Not Available
+|General Availability
+
 |Automatic device discovery and provisioning with Local Storage Operator
 |Technology Preview
 |Technology Preview
+|Technology Preview
+
+|Azure File CSI snapshot support
+|Not Available
+|Not Available
 |Technology Preview
 
 |{ibm-power-server-name} Block CSI Driver Operator
@@ -1314,6 +1389,26 @@ In the following tables, features are marked with the following statuses:
 |Not Available
 |Technology Preview
 |Technology Preview
+
+|VMWare vSphere multiple vCenter support
+|Not Available
+|Not Available
+|Technology Preview
+
+|Disabling/enabling storage on vSphere
+|Not Available
+|Not Available
+|Technology Preview
+
+|RWX/RWO SELinux Mount
+|Not Available 
+|Not Available
+|Developer Preview
+
+|Migrating CNS Volumes Between Datastores
+|Not Available 
+|Not Available
+|Developer Preview
 
 |====
 
@@ -1781,6 +1876,10 @@ In the following tables, features are marked with the following statuses:
 [id="ocp-telco-ran-4-17-known-issues_{context}"]
 
 [id="ocp-telco-core-4-17-known-issues_{context}"]
+
+[id="ocp-storage-core-4-17-known-issues_{context}"]
+
+* If the controller pod terminates while cloning, or taking or restoring a volume snapshot, is in progress, the Microsoft Azure File clone or snapshot persistent volume claims (PVCs) remain in the Pending state. To resolve this issue, delete any affected clone or snapshot PVCs, and then recreate those PVCs. (link:https://issues.redhat.com/browse/OCPBUGS-35977[*OCPBUGS-35977*])
 
 [id="ocp-4-17-asynchronous-errata-updates_{context}"]
 == Asynchronous errata updates
