CO 1.6.0 release notes

--- a/modules/gathering-data-specific-features.adoc
+++ b/modules/gathering-data-specific-features.adoc
@@ -78,6 +78,9 @@ endif::openshift-dedicated[]
 |`registry.redhat.io/lvms4/lvms-must-gather-rhel8:v<installed_version_LVMS>`
 |Data collection for the LVM Operator.
 
+|`ghcr.io/complianceascode/must-gather-ocp`
+|Data collection for the Compliance Operator.
+
 |`registry.redhat.io/rhacm2/acm-must-gather-rhel9:v<ACM_version>`
 |Data collection for {rh-rhacm-first} 2.10 and later.
 
