--- a/security/compliance_operator/co-management/compliance-operator-installation.adoc
+++ b/security/compliance_operator/co-management/compliance-operator-installation.adoc
@@ -13,6 +13,11 @@ Before you can use the Compliance Operator, you must ensure it is deployed in th
 The Compliance Operator might report incorrect results on managed platforms, such as OpenShift Dedicated, Red{nbsp}Hat OpenShift Service on AWS Classic, and Microsoft Azure Red{nbsp}Hat OpenShift. For more information, see the Knowledgebase article link:https://access.redhat.com/solutions/6983418[Compliance Operator reports incorrect results on Managed Services].
 ====
 
+[IMPORTANT]
+====
+Before deploying the Compliance Operator, you are required to define persistent storage in your cluster to store the raw results output. For more information, see xref:../../../storage/understanding-persistent-storage.adoc#persistent-storage-overview_understanding-persistent-storage[Persistant storage overview] and xref:../../../storage/understanding-persistent-storage.html#pvc-storage-class_understanding-persistent-storage[Storage class].
+====
+
 include::modules/compliance-operator-console-installation.adoc[leveloffset=+1]
 
 [IMPORTANT]
