--- a/release_notes/ocp-release-notes.adoc
+++ b/release_notes/ocp-release-notes.adoc
@@ -1,5 +1,5 @@
 :_mod-docs-content-type: ASSEMBLY
-[id="ocp-4-release-notes"]
+[id="ocp-release-notes"]
 = {product-title} {product-version} release notes
 include::_attributes/common-attributes.adoc[]
 :context: release-notes
