OCPBUGS-30568 Inheritance for Machine Config Pools

--- a/updating/update-using-custom-machine-config-pools.adoc
+++ b/updating/update-using-custom-machine-config-pools.adoc
@@ -127,6 +127,11 @@ You can use this update process with all documented {product-title} update proce
 
 include::modules/update-using-custom-machine-config-pools-about.adoc[leveloffset=+1]
 include::modules/update-using-custom-machine-config-pools-mcp.adoc[leveloffset=+1]
+
+// Managing machine configuration inheritance for a worker pool canary
+include::modules/update-using-custom-machine-config-pools-inheritance.adoc[leveloffset=+1]
+
+// Pausing the machine config pools
 include::modules/update-using-custom-machine-config-pools-pause.adoc[leveloffset=+1]
 
 [id="update-using-custom-machine-config-pools-update_{context}"]
