ROX25833 Release notes for 4.5.2
ROX25833 Review comments

ROX25833 Review comments

ROX25833 Updating release date

ROX25833 Updating date

Trigger build

--- a/release_notes/45-release-notes.adoc
+++ b/release_notes/45-release-notes.adoc
@@ -16,11 +16,13 @@ toc::[]
 |{product-title-short} version |Released on
 
 |`4.5.0` | 24 July 2024
+|`4.5.1` | 14 August 2024
+|`4.5.2` | 16 September 2024
 
 |====
 
 [id="about-this-release-450_{context}"]
-== About this release
+== About release 4.5.0
 
 {product-title-short} 4.5 includes the following new features, improvements, and updates:
 
@@ -376,20 +378,12 @@ The following section provides information about removed features listed in the 
 * Direct upgrades from {product-title-short} version 3.74 or earlier to version 4.5 are no longer supported. To upgrade to version 4.5 or later, you must first upgrade to version 4.4.
 
 [id="bug-fixes_{context}"]
-<<<<<<< HEAD
 == Bug fixes in version 4.5.0
-=======
-== Bug fixes
-
-[id="resolved-in-version-450_{context}"]
-=== Resolved in version 4.5.0
->>>>>>> a5b34bf021 (Release notes for 4.5)
 
 *Release date*: 24 July 2024
 
 * Previously, a bug prevented users without administrator privileges from accessing the listening endpoint data for clusters and namespaces for which they had `read` permission. With this update, users with `read` permission can now receive data from the listening endpoints service.
 
-<<<<<<< HEAD
 [id="about-release-451_{context}"]
 == About release 4.5.1
 
@@ -411,6 +405,25 @@ This release includes notable technical changes and bug fixes.
 * After upgrading to {product-title-short} 4.5.0, for nodes with more than 64 cores, Collector displayed an error about the ring buffer size not being allowed. This problem has been fixed.
 * The network graph was broken for users with clusters running Google Kubernetes Engine (GKE) version 1.29 and later due to a change from Google to use the managed public IP address range `34.118.224.0/20` for default networking services. The network graph marked this IP address range as external. This problem has been fixed.
 
-=======
->>>>>>> a5b34bf021 (Release notes for 4.5)
+[id="about-release-452_{context}"]
+== About release 4.5.2
+
+*Release date*: 16 September 2024
+
+This release of {product-title-short} introduces the following change:
+
+* The handling of orphaned node CVEs has been updated to prevent immediate removal and maintain accurate discovery times. To enable the updated feature, you must set the `ROX_ORPHANED_CVES_KEEP_ALIVE` variable in the Central deployment to `true`.
+
+This release of {product-title-short} fixes the following bugs:
+
+* Fixed an issue where Sensor was unable to identify {ocp} internal registry secrets due to a change in the pull secret annotation.
+
+* Fixed an issue where policies incorrectly displayed an enforced value of `Yes` in the *Configuration Management* -> *Application & Infrastructure* -> *Deployments* page due to inconsistent status handling, while showing `No` in the *Violations* page.
+
+* Fixed an issue where vulnerability data differed between the Vulnerability Management Workload CVE pages and the deprecated Vulnerability Management dashboard due to inconsistencies in vulnerability reporting.
+
+This release of {product-title-short} fixes the following security vulnerability:
+
+* https://access.redhat.com/security/cve/CVE-2024-3727[CVE-2024-3727]: Fixed a vulnerability related to Scanner where the `containers/image` digest type did not guarantee a valid type.
+
 include::modules/image-versions.adoc[leveloffset=+1]
