OSDOCS-11396 added custom ingress controller configurations to ROSA/OSD

--- a/modules/configuring-haproxy-interval.adoc
+++ b/modules/configuring-haproxy-interval.adoc
@@ -18,9 +18,19 @@ Setting a large value for the minimum HAProxy reload interval can cause latency 
 
 .Procedure
 
+ifndef::openshift-rosa,openshift-dedicated[]
 * Change the minimum HAProxy reload interval of the default Ingress Controller to 15 seconds by running the following command:
 +
 [source,terminal]
 ----
 $ oc -n openshift-ingress-operator patch ingresscontrollers/default --type=merge --patch='{"spec":{"tuningOptions":{"reloadInterval":"15s"}}}'
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+* Change the minimum HAProxy reload interval of the Ingress Controller to 15 seconds by running the following command:
++
+[source,terminal]
+----
+$ oc -n openshift-ingress-operator patch ingresscontrollers/<custom_ingresscontroller_name> --type=merge --patch='{"spec":{"tuningOptions":{"reloadInterval":"15s"}}}'
+----
+endif::openshift-rosa,openshift-dedicated[]
