--- a/modules/infrastructure-moving-router.adoc
+++ b/modules/infrastructure-moving-router.adoc
@@ -16,10 +16,18 @@ You can deploy the router pod to a different compute machine set. By default, th
 
 . View the `IngressController` custom resource for the router Operator:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc get ingresscontroller default -n openshift-ingress-operator -o yaml
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc get ingresscontroller <custom_ingresscontroller_name> -n openshift-ingress-operator -o yaml
+----
+endif::openshift-rosa,openshift-dedicated[]
 +
 The command output resembles the following text:
 +
@@ -52,10 +60,18 @@ status:
 
 . Edit the `ingresscontroller` resource and change the `nodeSelector` to use the `infra` label:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc edit ingresscontroller default -n openshift-ingress-operator
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc get ingresscontroller <custom_ingresscontroller_name> -n openshift-ingress-operator -o yaml
+----
+endif::openshift-rosa,openshift-dedicated[]
 +
 [source,yaml]
 ----
