--- a/modules/nw-autoscaling-ingress-controller.adoc
+++ b/modules/nw-autoscaling-ingress-controller.adoc
@@ -8,7 +8,7 @@
 
 You can automatically scale an Ingress Controller to dynamically meet routing performance or availability requirements, such as the requirement to increase throughput.
 
-The following procedure provides an example for scaling up the default Ingress Controller.
+The following procedure provides an example for scaling up the Ingress Controller.
 
 .Prerequisites
 
@@ -139,9 +139,10 @@ $ oc adm policy -n openshift-ingress-operator add-cluster-role-to-user cluster-m
 The argument `add-cluster-role-to-user` is only required if you use cross-namespace queries. The following step uses a query from the `kube-metrics` namespace which requires this argument.
 ====
 
-. Create a new `ScaledObject` YAML file, `ingress-autoscaler.yaml`, that targets the default Ingress Controller deployment:
+. Create a new `ScaledObject` YAML file, `ingress-autoscaler.yaml`, that targets the Ingress Controller deployment:
 +
 .Example `ScaledObject` definition
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,yaml]
 ----
 apiVersion: keda.sh/v1alpha1
@@ -177,6 +178,43 @@ spec:
 <3> The Thanos service endpoint in the `openshift-monitoring` namespace.
 <4> The Ingress Operator namespace.
 <5> This expression evaluates to however many worker nodes are present in the deployed cluster.
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,yaml]
+----
+apiVersion: keda.sh/v1alpha1
+kind: ScaledObject
+metadata:
+  name: ingress-scaler
+spec:
+  scaleTargetRef: <1>
+    apiVersion: operator.openshift.io/v1
+    kind: IngressController
+    name: <custom_ingresscontroller_name>
+    envSourceContainerName: ingress-operator
+  minReplicaCount: 1
+  maxReplicaCount: 20 <2>
+  cooldownPeriod: 1
+  pollingInterval: 1
+  triggers:
+  - type: prometheus
+    metricType: AverageValue
+    metadata:
+      serverAddress: https://thanos-querier.openshift-monitoring.svc.cluster.local:9091 <3>
+      namespace: openshift-ingress-operator <4>
+      metricName: 'kube-node-role'
+      threshold: '1'
+      query: 'sum(kube_node_role{role="worker",service="kube-state-metrics"})' <5>
+      authModes: "bearer"
+    authenticationRef:
+      name: keda-trigger-auth-prometheus
+----
+<1> The custom resource that you are targeting. In this case, the Ingress Controller.
+<2> Optional: The maximum number of replicas. If you omit this field, the default maximum is set to 100 replicas.
+<3> The Thanos service endpoint in the `openshift-monitoring` namespace.
+<4> The Ingress Operator namespace.
+<5> This expression evaluates to however many worker nodes are present in the deployed cluster.
+endif::openshift-rosa,openshift-dedicated[]
 +
 [IMPORTANT]
 ====
@@ -191,14 +229,22 @@ $ oc apply -f ingress-autoscaler.yaml
 ----
 
 .Verification
-* Verify that the default Ingress Controller is scaled out to match the value returned by the `kube-state-metrics` query by running the following commands:
+* Verify that the Ingress Controller is scaled out to match the value returned by the `kube-state-metrics` query by running the following commands:
 
 ** Use the `grep` command to search the Ingress Controller YAML file for replicas:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc get -n openshift-ingress-operator ingresscontroller/default -o yaml | grep replicas:
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc get ingresscontroller/<custom_ingresscontroller_name> -o yaml | grep replicas:
+----
+endif::openshift-rosa,openshift-dedicated[]
 +
 .Example output
 [source,terminal]
