--- a/modules/nw-configure-ingress-access-logging.adoc
+++ b/modules/nw-configure-ingress-access-logging.adoc
@@ -22,6 +22,7 @@ Configure Ingress access logging to a sidecar.
 
 * To configure Ingress access logging, you must specify a destination using `spec.logging.access.destination`. To specify logging to a sidecar container, you must specify `Container` `spec.logging.access.destination.type`. The following example is an Ingress Controller definition that logs to a `Container` destination:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,yaml]
 ----
 apiVersion: operator.openshift.io/v1
@@ -36,6 +37,23 @@ spec:
       destination:
         type: Container
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,yaml]
+----
+apiVersion: operator.openshift.io/v1
+kind: IngressController
+metadata:
+  name: <custom_ingresscontroller_name>
+  namespace: openshift-ingress-operator
+spec:
+  replicas: 2
+  logging:
+    access:
+      destination:
+        type: Container
+----
+endif::openshift-rosa,openshift-dedicated[]
 
 * When you configure the Ingress Controller to log to a sidecar, the operator creates a container named `logs` inside the Ingress Controller Pod:
 +
@@ -54,6 +72,7 @@ Configure Ingress access logging to a Syslog endpoint.
 
 * To configure Ingress access logging, you must specify a destination using `spec.logging.access.destination`. To specify logging to a Syslog endpoint destination, you must specify `Syslog` for `spec.logging.access.destination.type`. If the destination type is `Syslog`, you must also specify a destination endpoint using `spec.logging.access.destination.syslog.address` and you can specify a facility using `spec.logging.access.destination.syslog.facility`. The following example is an Ingress Controller definition that logs to a `Syslog` destination:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,yaml]
 ----
 apiVersion: operator.openshift.io/v1
@@ -71,6 +90,26 @@ spec:
           address: 1.2.3.4
           port: 10514
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,yaml]
+----
+apiVersion: operator.openshift.io/v1
+kind: IngressController
+metadata:
+  name: <custom_ingresscontroller_name>
+  namespace: openshift-ingress-operator
+spec:
+  replicas: 2
+  logging:
+    access:
+      destination:
+        type: Syslog
+        syslog:
+          address: 1.2.3.4
+          port: 10514
+----
+endif::openshift-rosa,openshift-dedicated[]
 +
 [NOTE]
 ====
@@ -83,6 +122,7 @@ Configure Ingress access logging with a specific log format.
 
 * You can specify `spec.logging.access.httpLogFormat` to customize the log format. The following example is an Ingress Controller definition that logs to a `syslog` endpoint with IP address 1.2.3.4 and port 10514:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,yaml]
 ----
 apiVersion: operator.openshift.io/v1
@@ -101,11 +141,33 @@ spec:
           port: 10514
       httpLogFormat: '%ci:%cp [%t] %ft %b/%s %B %bq %HM %HU %HV'
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,yaml]
+----
+apiVersion: operator.openshift.io/v1
+kind: IngressController
+metadata:
+  name: <custom_ingresscontroller_name>
+  namespace: openshift-ingress-operator
+spec:
+  replicas: 2
+  logging:
+    access:
+      destination:
+        type: Syslog
+        syslog:
+          address: 1.2.3.4
+          port: 10514
+      httpLogFormat: '%ci:%cp [%t] %ft %b/%s %B %bq %HM %HU %HV'
+----
+endif::openshift-rosa,openshift-dedicated[]
 
 Disable Ingress access logging.
 
 * To disable Ingress access logging, leave `spec.logging` or `spec.logging.access` empty:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,yaml]
 ----
 apiVersion: operator.openshift.io/v1
@@ -118,18 +180,34 @@ spec:
   logging:
     access: null
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,yaml]
+----
+apiVersion: operator.openshift.io/v1
+kind: IngressController
+metadata:
+  name: <custom_ingresscontroller_name>
+  namespace: openshift-ingress-operator
+spec:
+  replicas: 2
+  logging:
+    access: null
+----
+endif::openshift-rosa,openshift-dedicated[]
 
 Allow the Ingress Controller to modify the HAProxy log length when using a sidecar.
 
 * Use `spec.logging.access.destination.syslog.maxLength` if you are using `spec.logging.access.destination.type: Syslog`.
 
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,yaml]
 ----
 apiVersion: operator.openshift.io/v1
 kind: IngressController
 metadata:
-  name: default
+  name: <custom_ingresscontroller_name>
   namespace: openshift-ingress-operator
 spec:
   replicas: 2
@@ -142,15 +220,37 @@ spec:
           maxLength: 4096
           port: 10514
 ----
-* Use `spec.logging.access.destination.container.maxLength` if you are using `spec.logging.access.destination.type: Container`.
-
-+
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
 [source,yaml]
 ----
 apiVersion: operator.openshift.io/v1
 kind: IngressController
 metadata:
-  name: default
+  name: <custom_ingresscontroller_name>
+  namespace: openshift-ingress-operator
+spec:
+  replicas: 2
+  logging:
+    access:
+      destination:
+        type: Syslog
+        syslog:
+          address: 1.2.3.4
+          maxLength: 4096
+          port: 10514
+----
+endif::openshift-rosa,openshift-dedicated[]
+* Use `spec.logging.access.destination.container.maxLength` if you are using `spec.logging.access.destination.type: Container`.
+
++
+ifndef::openshift-rosa,openshift-dedicated[]
+[source,yaml]
+----
+apiVersion: operator.openshift.io/v1
+kind: IngressController
+metadata:
+  name: <custom_ingresscontroller_name>
   namespace: openshift-ingress-operator
 spec:
   replicas: 2
@@ -161,4 +261,22 @@ spec:
         container:
           maxLength: 8192
 ----
-
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,yaml]
+----
+apiVersion: operator.openshift.io/v1
+kind: IngressController
+metadata:
+  name: <custom_ingresscontroller_name>
+  namespace: openshift-ingress-operator
+spec:
+  replicas: 2
+  logging:
+    access:
+      destination:
+        type: Container
+        container:
+          maxLength: 8192
+----
+endif::openshift-rosa,openshift-dedicated[]
