--- a/modules/nw-configuring-router-compression.adoc
+++ b/modules/nw-configuring-router-compression.adoc
@@ -20,10 +20,18 @@ Not all MIME types benefit from compression, but HAProxy still uses resources to
 . Configure the `httpCompression` field for the Ingress Controller.
 .. Use the following command to edit the `IngressController` resource:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc edit -n openshift-ingress-operator ingresscontrollers/default
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc edit -n openshift-ingress-operator ingresscontrollers/<custom_ingresscontroller_name>
+----
+endif::openshift-rosa,openshift-dedicated[]
 +
 .. Under `spec`, set the `httpCompression` policy field to `mimeTypes` and specify a list of MIME types that should have compression applied:
 +
