--- a/modules/nw-ingress-controller-config-tuningoptions-healthcheckinterval.adoc
+++ b/modules/nw-ingress-controller-config-tuningoptions-healthcheckinterval.adoc
@@ -13,10 +13,18 @@ A cluster administrator can set the health check interval to define how long the
 .Procedure
 * Update the Ingress Controller to change the interval between back end health checks:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc -n openshift-ingress-operator patch ingresscontroller/default --type=merge -p '{"spec":{"tuningOptions": {"healthCheckInterval": "8s"}}}'
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc -n openshift-ingress-operator patch ingresscontroller/<custom_ingresscontroller_name> --type=merge -p '{"spec":{"tuningOptions": {"healthCheckInterval": "8s"}}}'
+----
+endif::openshift-rosa,openshift-dedicated[]
 +
 [NOTE]
 ====
