--- a/modules/nw-ingress-controller-configuration-proxy-protocol.adoc
+++ b/modules/nw-ingress-controller-configuration-proxy-protocol.adoc
@@ -44,10 +44,18 @@ You must configure both {product-title} and the external load balancer to either
 .Procedure
 . Edit the Ingress Controller resource by entering the following command in your CLI:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc -n openshift-ingress-operator edit ingresscontroller/default
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc -n openshift-ingress-operator edit ingresscontroller/<custom_ingresscontroller_name>
+----
+endif::openshift-rosa,openshift-dedicated[]
 
 . Set the PROXY configuration:
 +
