--- a/modules/nw-ingress-converting-http-header-case.adoc
+++ b/modules/nw-ingress-converting-http-header-case.adoc
@@ -26,10 +26,18 @@ As a cluster administrator, you can convert the HTTP header case by entering the
 
 .. Change the HTTP header from `host` to `Host` by running the following command:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc -n openshift-ingress-operator patch ingresscontrollers/default --type=merge --patch='{"spec":{"httpHeaders":{"headerNameCaseAdjustments":["Host"]}}}'
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc -n openshift-ingress-operator patch ingresscontrollers/<custom_ingresscontroller_name> --type=merge --patch='{"spec":{"httpHeaders":{"headerNameCaseAdjustments":["Host"]}}}'
+----
+endif::openshift-rosa,openshift-dedicated[]
 +
 .. Create a `Route` resource YAML file so that the annotation can be applied to the application.
 +
