--- a/modules/nw-ingress-custom-default-certificate-remove.adoc
+++ b/modules/nw-ingress-custom-default-certificate-remove.adoc
@@ -18,11 +18,20 @@ As an administrator, you can remove a custom certificate that you configured an 
 
 * To remove the custom certificate and restore the certificate that ships with {product-title}, enter the following command:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc patch -n openshift-ingress-operator ingresscontrollers/default \
   --type json -p $'- op: remove\n  path: /spec/defaultCertificate'
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc patch -n openshift-ingress-operator ingresscontrollers/<custom_ingresscontroller_name> \
+  --type json -p $'- op: remove\n  path: /spec/defaultCertificate'
+----
+endif::openshift-rosa,openshift-dedicated[]
 +
 There can be a delay while the cluster reconciles the new certificate configuration.
 
