--- a/modules/nw-ingress-set-or-delete-http-headers.adoc
+++ b/modules/nw-ingress-set-or-delete-http-headers.adoc
@@ -19,13 +19,22 @@ The following procedure modifies the Ingress Controller to set the X-Forwarded-C
 .Procedure
 . Edit the Ingress Controller resource:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc -n openshift-ingress-operator edit ingresscontroller/default
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc -n openshift-ingress-operator edit ingresscontroller/<custom_ingresscontroller_name>
+----
+endif::openshift-rosa,openshift-dedicated[]
 
 . Replace the X-SSL-Client-Der HTTP request header with the X-Forwarded-Client-Cert HTTP request header:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,yaml]
 ----
 apiVersion: operator.openshift.io/v1
@@ -51,6 +60,34 @@ spec:
 <3> The name of the header you want to change. For a list of available headers you can set or delete, see _HTTP header configuration_.
 <4> The type of action being taken on the header. This field can have the value `Set` or `Delete`.
 <5> When setting HTTP headers, you must provide a `value`. The value can be a string from a list of available directives for that header, for example `DENY`, or it can be a dynamic value that will be interpreted using HAProxy's dynamic value syntax. In this case, a dynamic value is added.
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,yaml]
+----
+apiVersion: operator.openshift.io/v1
+kind: IngressController
+metadata:
+  name: <custom_ingresscontroller_name>
+  namespace: openshift-ingress-operator
+spec:
+  httpHeaders:
+    actions: <1>
+      request: <2>
+      - name: X-Forwarded-Client-Cert <3>
+        action:
+          type: Set <4>
+          set:
+           value: "%{+Q}[ssl_c_der,base64]" <5>
+      - name: X-SSL-Client-Der
+        action:
+          type: Delete
+----
+<1> The list of actions you want to perform on the HTTP headers.
+<2> The type of header you want to change. In this case, a request header.
+<3> The name of the header you want to change. For a list of available headers you can set or delete, see _HTTP header configuration_.
+<4> The type of action being taken on the header. This field can have the value `Set` or `Delete`.
+<5> When setting HTTP headers, you must provide a `value`. The value can be a string from a list of available directives for that header, for example `DENY`, or it can be a dynamic value that will be interpreted using HAProxy's dynamic value syntax. In this case, a dynamic value is added.
+endif::openshift-rosa,openshift-dedicated[]
 +
 [NOTE]
 ====
