--- a/modules/nw-ingress-setting-a-custom-default-certificate.adoc
+++ b/modules/nw-ingress-setting-a-custom-default-certificate.adoc
@@ -67,11 +67,20 @@ $ oc --namespace openshift-ingress create secret tls custom-certs-default --cert
 +
 . Update the IngressController CR to reference the new certificate secret:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc patch --type=merge --namespace openshift-ingress-operator ingresscontrollers/default \
   --patch '{"spec":{"defaultCertificate":{"name":"custom-certs-default"}}}'
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc patch --type=merge --namespace openshift-ingress-operator ingresscontrollers/<custom_ingresscontroller_name> \
+  --patch '{"spec":{"defaultCertificate":{"name":"custom-certs-default"}}}'
+----
+endif::openshift-rosa,openshift-dedicated[]
 +
 . Verify the update was effective:
 +
@@ -96,6 +105,7 @@ issuer=C = US, ST = NC, L = Raleigh, O = RH, OU = OCP4, CN = example.com
 notAfter=May 10 08:32:45 2022 GM
 ----
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [TIP]
 ====
 You can alternatively apply the following YAML to set a custom default certificate:
@@ -112,6 +122,25 @@ spec:
     name: custom-certs-default
 ----
 ====
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[TIP]
+====
+You can alternatively apply the following YAML to set a custom default certificate:
+
+[source,yaml]
+----
+apiVersion: operator.openshift.io/v1
+kind: IngressController
+metadata:
+  name: <custom_ingresscontroller_name>
+  namespace: openshift-ingress-operator
+spec:
+  defaultCertificate:
+    name: custom-certs-default
+----
+====
+endif::openshift-rosa,openshift-dedicated[]
 +
 The certificate secret name should match the value used to update the CR.
 
