--- a/modules/nw-ingress-setting-max-connections.adoc
+++ b/modules/nw-ingress-setting-max-connections.adoc
@@ -13,10 +13,18 @@ A cluster administrator can set the maximum number of simultaneous connections f
 .Procedure
 * Update the Ingress Controller to change the maximum number of connections for HAProxy:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc -n openshift-ingress-operator patch ingresscontroller/default --type=merge -p '{"spec":{"tuningOptions": {"maxConnections": 7500}}}'
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc -n openshift-ingress-operator patch ingresscontroller/<custom_ingresscontroller_name> --type=merge -p '{"spec":{"tuningOptions": {"maxConnections": 7500}}}'
+----
+endif::openshift-rosa,openshift-dedicated[]
 +
 [WARNING]
 ====
