--- a/modules/nw-ingress-setting-thread-count.adoc
+++ b/modules/nw-ingress-setting-thread-count.adoc
@@ -13,10 +13,18 @@ A cluster administrator can set the thread count to increase the amount of incom
 .Procedure
 * Update the Ingress Controller to increase the number of threads:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc -n openshift-ingress-operator patch ingresscontroller/default --type=merge -p '{"spec":{"tuningOptions": {"threadCount": 8}}}'
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc -n openshift-ingress-operator patch ingresscontroller/<custom_ingresscontroller_name> --type=merge -p '{"spec":{"tuningOptions": {"threadCount": 8}}}'
+----
+endif::openshift-rosa,openshift-dedicated[]
 +
 [NOTE]
 ====
