--- a/modules/nw-ingress-view.adoc
+++ b/modules/nw-ingress-view.adoc
@@ -18,7 +18,15 @@ within a minute.
 
 * View the default Ingress Controller:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc describe --namespace=openshift-ingress-operator ingresscontroller/default
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc describe --namespace=openshift-ingress-operator ingresscontroller/<custom_ingresscontroller_name>
+----
+endif::openshift-rosa,openshift-dedicated[]
