--- a/modules/nw-ingresscontroller-change-external.adoc
+++ b/modules/nw-ingresscontroller-change-external.adoc
@@ -33,10 +33,18 @@ $ oc -n openshift-ingress-operator patch ingresscontrollers/private --type=merge
 +
 * To check the status of the Ingress Controller, enter the following command:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc -n openshift-ingress-operator get ingresscontrollers/default -o yaml
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc -n openshift-ingress-operator get ingresscontrollers/<custom_ingresscontroller_name> -o yaml
+----
+endif::openshift-rosa,openshift-dedicated[]
 +
 ** The `Progressing` status condition indicates whether you must take further action. For example, the status condition can indicate that you need to delete the service by entering the following command:
 +
