--- a/modules/nw-ne-openshift-ingress.adoc
+++ b/modules/nw-ne-openshift-ingress.adoc
@@ -9,8 +9,8 @@ When you create your {product-title} cluster, pods and services running on the c
 ifndef::openshift-rosa,openshift-dedicated[]
 The Ingress Operator makes it possible for external clients to access your service by deploying and managing one or more HAProxy-based
 link:https://kubernetes.io/docs/concepts/services-networking/ingress-controllers/[Ingress Controllers] to handle routing. You can use the Ingress Operator to route traffic by specifying {product-title} `Route` and Kubernetes `Ingress` resources. Configurations within the Ingress Controller, such as the ability to define `endpointPublishingStrategy` type and internal load balancing, provide ways to publish Ingress Controller endpoints.
-endif::[]
+endif::openshift-rosa,openshift-dedicated[]
 
 ifdef::openshift-rosa,openshift-dedicated[]
-The Ingress Operator makes it possible for external clients to access your service by deploying and managing one or more HAProxy-based link:https://kubernetes.io/docs/concepts/services-networking/ingress-controllers/[Ingress Controllers] to handle routing. Red Hat Site Reliability Engineers (SRE) manage the Ingress Operator for {product-title} clusters. While you cannot alter the settings for the Ingress Operator, you may view the default Ingress Controller configurations, status, and logs as well as the Ingress Operator status.
-endif::[]
+The Ingress Operator makes it possible for external clients to access your service by deploying and managing one or more HAProxy-based link:https://kubernetes.io/docs/concepts/services-networking/ingress-controllers/[Ingress Controllers] to handle routing. Red{nbsp}Hat Site Reliability Engineers (SRE) manage the Ingress Operator for {product-title} clusters. While you cannot alter the settings for the Ingress Operator, you may use the ROSA CLI to view the default Ingress Controller configurations, status, and logs as well as the Ingress Operator status, but not edit the default configurations. You can add your own custom Ingress Controllers with their own configurations. However, custom Ingress Controllers are considered "customer managed" and are not managed by SRE. 
+endif::openshift-rosa,openshift-dedicated[]
