--- a/modules/nw-route-admission-policy.adoc
+++ b/modules/nw-route-admission-policy.adoc
@@ -22,10 +22,18 @@ Allowing claims across namespaces should only be enabled for clusters with trust
 
 * Edit the `.spec.routeAdmission` field of the `ingresscontroller` resource variable using the following command:
 +
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,terminal]
 ----
 $ oc -n openshift-ingress-operator patch ingresscontroller/default --patch '{"spec":{"routeAdmission":{"namespaceOwnership":"InterNamespaceAllowed"}}}' --type=merge
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,terminal]
+----
+$ oc -n openshift-ingress-operator patch ingresscontroller/<custom_ingresscontroller_name> --patch '{"spec":{"routeAdmission":{"namespaceOwnership":"InterNamespaceAllowed"}}}' --type=merge
+----
+endif::openshift-rosa,openshift-dedicated[]
 +
 .Sample Ingress Controller configuration
 [source,yaml]
@@ -39,6 +47,7 @@ spec:
 [TIP]
 ====
 You can alternatively apply the following YAML to configure the route admission policy:
+ifndef::openshift-rosa,openshift-dedicated[]
 [source,yaml]
 ----
 apiVersion: operator.openshift.io/v1
@@ -50,4 +59,18 @@ spec:
   routeAdmission:
     namespaceOwnership: InterNamespaceAllowed
 ----
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+[source,yaml]
+----
+apiVersion: operator.openshift.io/v1
+kind: IngressController
+metadata:
+  name: <custom_ingresscontroller_name>
+  namespace: openshift-ingress-operator
+spec:
+  routeAdmission:
+    namespaceOwnership: InterNamespaceAllowed
+----
+endif::openshift-rosa,openshift-dedicated[]
 ====
