--- a/modules/nw-scaling-ingress-controller.adoc
+++ b/modules/nw-scaling-ingress-controller.adoc
@@ -9,7 +9,7 @@
 Manually scale an Ingress Controller to meeting routing performance or
 availability requirements such as the requirement to increase throughput. `oc`
 commands are used to scale the `IngressController` resource. The following
-procedure provides an example for scaling up the default `IngressController`.
+procedure provides an example for scaling up the `IngressController`.
 
 [NOTE]
 ====
@@ -17,6 +17,7 @@ Scaling is not an immediate action, as it takes time to create the desired numbe
 ====
 
 .Procedure
+ifndef::openshift-rosa,openshift-dedicated[]
 . View the current number of available replicas for the default `IngressController`:
 +
 [source,terminal]
@@ -74,3 +75,63 @@ spec:
 ----
 ====
 <1> If you need a different amount of replicas, change the `replicas` value.
+endif::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-dedicated[]
+. View the current number of available replicas for the `IngressController`:
++
+[source,terminal]
+----
+$ oc get -n openshift-ingress-operator ingresscontrollers/<custom_ingresscontroller_name> -o jsonpath='{$.status.availableReplicas}'
+----
++
+.Example output
+[source,terminal]
+----
+2
+----
+
+. Scale the `IngressController` to the desired number of replicas using
+the `oc patch` command. The following example scales a custom `IngressController`
+to 3 replicas:
++
+[source,terminal]
+----
+$ oc patch -n openshift-ingress-operator ingresscontroller/<custom_ingresscontroller_name> --patch '{"spec":{"replicas": 3}}' --type=merge
+----
++
+.Example output
+[source,terminal]
+----
+ingresscontroller.operator.openshift.io/<custom_ingresscontroller_name> patched
+----
+
+. Verify that the `IngressController` scaled to the number of replicas
+that you specified:
++
+[source,terminal]
+----
+$ oc get -n openshift-ingress-operator ingresscontrollers/<custom_ingresscontroller_name> -o jsonpath='{$.status.availableReplicas}'
+----
++
+.Example output
+[source,terminal]
+----
+3
+----
++
+[TIP]
+====
+You can alternatively apply the following YAML to scale an Ingress Controller to three replicas:
+[source,yaml]
+----
+apiVersion: operator.openshift.io/v1
+kind: IngressController
+metadata:
+  name: <custom_ingresscontroller_name>
+  namespace: openshift-ingress-operator
+spec:
+  replicas: 3               <1>
+----
+====
+<1> If you need a different amount of replicas, change the `replicas` value.
+endif::openshift-rosa,openshift-dedicated[]
