--- a/modules/sd-ingress-responsibilities.adoc
+++ b/modules/sd-ingress-responsibilities.adoc
@@ -15,20 +15,22 @@ The following table details the components of the Ingress Operator and if Red Ha
 |Managed by
 |Default configuration?
 
-|Scaling Ingress Controller | SRE | Yes
+|Scaling Default Ingress Controller | SRE | Yes
 
 |Ingress Operator thread count | SRE | Yes
 
-|Ingress Controller access logging | SRE | Yes
+|Default Ingress Controller access logging | SRE | Yes
 
-|Ingress Controller sharding | SRE | Yes
+|Default Ingress Controller sharding | SRE | Yes
 
-|Ingress Controller route admission policy | SRE | Yes
+|Default Ingress Controller route admission policy | SRE | Yes
 
-|Ingress Controller wildcard routes | SRE | Yes
+|Default Ingress Controller wildcard routes | SRE | Yes
 
-|Ingress Controller X-Forwarded headers | SRE | Yes
+|Default Ingress Controller X-Forwarded headers | SRE | Yes
 
-|Ingress Controller route compression | SRE | Yes
+|Default Ingress Controller route compression | SRE | Yes
+
+|Custom Ingress Controller creation and configuration | Customer | Customer managed
 
 |===
