VCF version addition

--- a/modules/installation-vsphere-infrastructure.adoc
+++ b/modules/installation-vsphere-infrastructure.adoc
@@ -47,8 +47,8 @@ endif::[]
 
 You must install an {product-title} cluster on one of the following versions of a VMware vSphere instance that meets the requirements for the components that you use:
 
-* Version 7.0 Update 2 or later
-* Version 8.0 Update 1 or later
+* Version 7.0 Update 2 or later, or VMware Cloud Foundation 4.3 or later
+* Version 8.0 Update 1 or later, or VMware Cloud Foundation 5.0 or later
 
 You can host the {vmw-full} infrastructure on-premise or on a link:https://cloud.vmware.com/providers[VMware Cloud Verified provider] that meets the requirements outlined in the following table:
 
@@ -57,8 +57,8 @@ You can host the {vmw-full} infrastructure on-premise or on a link:https://cloud
 |===
 |Virtual environment product |Required version
 |VMware virtual hardware | 15 or later
-|vSphere ESXi hosts | 7.0 Update 2 or later; 8.0 Update 1 or later
-|vCenter host   | 7.0 Update 2 or later; 8.0 Update 1 or later
+|vSphere ESXi hosts | 7.0 Update 2 or later, or VMware Cloud Foundation 4.3 or later; 8.0 Update 1 or later, or VMware Cloud Foundation 5.0 or later
+|vCenter host | 7.0 Update 2 or later, or VMware Cloud Foundation 4.3 or later; 8.0 Update 1 or later, or VMware Cloud Foundation 5.0 or later
 |===
 
 .Minimum supported vSphere version for VMware components
@@ -66,8 +66,8 @@ You can host the {vmw-full} infrastructure on-premise or on a link:https://cloud
 |Component | Minimum supported versions |Description
 
 |Hypervisor
-|vSphere 7.0 Update 2 (or later) or vSphere 8.0 Update 1 (or later) with virtual hardware version 15
-|This version is the minimum version that {op-system-first} supports. For more information about supported hardware on the latest version of {op-system-base-full} that is compatible with {op-system}, see link:https://catalog.redhat.com/hardware/search[Hardware] on the Red Hat Customer Portal.
+|vSphere 7.0 Update 2 or later, or VMware Cloud Foundation 4.3 or later; vSphere 8.0 Update 1 or later, or VMware Cloud Foundation 5.0 or later with virtual hardware version 15
+|This hypervisor version is the minimum version that {op-system-first} supports. For more information about supported hardware on the latest version of {op-system-base-full} that is compatible with {op-system}, see link:https://catalog.redhat.com/hardware/search[Hardware] on the Red Hat Customer Portal.
 
 |Storage with in-tree drivers
 |vSphere 7.0 Update 2 and later; 8.0 Update 1 or later
@@ -75,8 +75,8 @@ You can host the {vmw-full} infrastructure on-premise or on a link:https://cloud
 
 ifndef::vmc[]
 |Optional: Networking (NSX-T)
-|vSphere 7.0 Update 2 or later; vSphere 8.0 Update 1 or later
-|At a minimum, vSphere 7.0 Update 2 or vSphere 8.0 Update 1 is required for {product-title}. For more information about the compatibility of NSX and {product-title}, see the Release Notes section of VMware's link:https://docs.vmware.com/en/VMware-NSX-Container-Plugin/index.html[NSX container plugin documentation].
+|vSphere 7.0 Update 2 or later, or VMware Cloud Foundation 4.3 or later; vSphere 8.0 Update 1 or later, or VMware Cloud Foundation 5.0 or later
+|For more information about the compatibility of NSX and {product-title}, see the Release Notes section of VMware's link:https://docs.vmware.com/en/VMware-NSX-Container-Plugin/index.html[NSX container plugin documentation].
 endif::vmc[]
 
 |CPU micro-architecture
