OSDOCS-11215:networking GA/TP/Rem/Dep

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -1125,6 +1125,10 @@ In the following tables, features are marked with the following statuses:
 
 BMER was deprecated in {product-title} version 4.15 and 4.16. With this release, BMER is no longer supported and the related BMER content is removed from the documentation.
 
+[id="ocp-4-17-sdn-plugin_{context}"]
+==== OpenShift SDN network plugin (Removed)
+OpenShift SDN network plugin was deprecated in 4.15 and 4.16. With this release, the SDN network plugin is no longer supported and the content has been removed from the documentation.
+
 [id="ocp-4-17-future-deprecation"]
 === Notice of future deprecation
 
@@ -1382,7 +1386,7 @@ In the following tables, features are marked with the following statuses:
 | Live migration to OVN-Kubernetes from OpenShift SDN
 | Not Available
 | General Availability
-| General Availability
+| Not Available
 
 | Overlapping IP configuration for multi-tenant networks with Whereabouts
 | Not Available
