[OKD] Update openshift-client/install download procedures

--- a/modules/cli-installing-cli.adoc
+++ b/modules/cli-installing-cli.adoc
@@ -99,8 +99,9 @@ endif::microshift[]
 .Procedure
 
 ifdef::openshift-origin[]
-. Navigate to link:https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/[https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/] and choose the folder for your operating system and architecture.
-. Download `oc.tar.gz`.
+. Navigate to link:https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/[https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/]
+. Choose the folder for the appropriate version, for example, `latest-4.16`
+. Download the version of `openshift-client-linux-*.tar.gz` appropriate for your operating system and architecture.
 endif::[]
 ifndef::openshift-origin,microshift[]
 . Navigate to the link:https://access.redhat.com/downloads/content/290[{product-title} downloads page] on the Red Hat Customer Portal.
@@ -152,8 +153,9 @@ endif::microshift[]
 .Procedure
 
 ifdef::openshift-origin[]
-. Navigate to link:https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/[https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/] and choose the folder for your operating system and architecture.
-. Download `oc.zip`.
+. Navigate to link:https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/[https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/]
+. Choose the folder for the appropriate version, for example, `latest-4.16`
+. Download `openshift-client-windows.zip`.
 endif::[]
 ifndef::openshift-origin,microshift[]
 . Navigate to the link:https://access.redhat.com/downloads/content/290[{product-title} downloads page] on the Red Hat Customer Portal.
@@ -198,8 +200,14 @@ endif::microshift[]
 .Procedure
 
 ifdef::openshift-origin[]
-. Navigate to link:https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/[https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/] and choose the folder for your operating system and architecture.
-. Download `oc.tar.gz`.
+. Navigate to link:https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/[https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/]
+. Choose the folder for the appropriate version, for example, `latest-4.16`
+. Download `openshift-client-mac.tar.gz`.
++
+[NOTE]
+====
+For macOS arm64, download `openshift-client-mac-arm64.tar.gz`.
+====
 endif::[]
 ifndef::openshift-origin,microshift[]
 . Navigate to the link:https://access.redhat.com/downloads/content/290[{product-title} downloads page] on the Red Hat Customer Portal.
