--- a/modules/install-sno-generating-the-install-iso-manually.adoc
+++ b/modules/install-sno-generating-the-install-iso-manually.adoc
@@ -37,7 +37,7 @@ ifdef::openshift-origin[]
 $ OKD_VERSION=<okd_version> <1>
 ----
 +
-<1> Replace `<okd_version>` with the current version, for example, `4.14.0-0.okd-2024-01-26-175629`
+<1> Replace `<okd_version>` with the current version, for example, `4.16.0-0.okd-scos-2024-08-21-155613`
 endif::openshift-origin[]
 
 . Set the host architecture:
@@ -71,7 +71,7 @@ ifdef::openshift-origin[]
 +
 [source,terminal]
 ----
-$ curl -L https://github.com/okd-project/okd/releases/download/$OKD_VERSION/openshift-client-linux-$OKD_VERSION.tar.gz -o oc.tar.gz
+$ curl -L https://github.com/okd-project/okd-scos/releases/download/$OKD_VERSION/openshift-client-linux-$OKD_VERSION.tar.gz -o oc.tar.gz
 ----
 +
 [source,terminal]
@@ -98,7 +98,7 @@ ifdef::openshift-origin[]
 +
 [source,terminal]
 ----
-$ curl -L https://github.com/okd-project/okd/releases/download/$OKD_VERSION/openshift-install-linux-$OKD_VERSION.tar.gz -o openshift-install-linux.tar.gz
+$ curl -L https://github.com/okd-project/okd-scos/releases/download/$OKD_VERSION/openshift-install-linux-$OKD_VERSION.tar.gz -o openshift-install-linux.tar.gz
 ----
 endif::openshift-origin[]
 +
