OSDOCS-11352: add dnf to rn

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -52,6 +52,10 @@ This release adds improvements related to the following components and concepts:
 [id="ocp-4-17-rhcos_{context}"]
 === {op-system-first}
 
+[id="ocp-4-17-rhcos-dnf_{context}"]
+==== Support for the DNF package manager
+With this release, you can now use DNF to install additional packages to your customized {op-system-first} builds. For more information, see xref:../machine_configuration/mco-coreos-layering.adoc[{op-system-first} layering].
+
 [id="ocp-4-17-installation-and-update_{context}"]
 === Installation and update
 
@@ -1771,6 +1775,8 @@ In the following tables, features are marked with the following statuses:
 
 // TODO: This known issue should carry forward to 4.9 and beyond!
 * The `oc annotate` command does not work for LDAP group names that contain an equal sign (`=`), because the command uses the equal sign as a delimiter between the annotation name and value. As a workaround, use `oc patch` or `oc edit` to add the annotation. (link:https://bugzilla.redhat.com/show_bug.cgi?id=1917280[*BZ#1917280*])
+
+* The DNF package manager included in {op-system-first} images cannot be used at runtime, because DNF relies on additional packages to access entitled nodes in a cluster that are under a Red Hat subscription. As a workaround, use the `rpm-ostree` command instead. (link:https://issues.redhat.com/browse/OCPBUGS-35247[*OCPBUGS-35247*])
 
 [id="ocp-telco-ran-4-17-known-issues_{context}"]
 
