--- a/modules/go-compatibility-and-support-matrix.adoc
+++ b/modules/go-compatibility-and-support-matrix.adoc
@@ -27,14 +27,19 @@ In the table, features are marked with the following statuses:
 
 s|Version s|`kam`  s|Argo CD CLI  s|Helm  s|Kustomize s|Argo CD s|Argo Rollouts s|Dex     s|RH SSO |
 
+|1.14.0 |0.0.51 TP |2.12.3 TP |3.15.2 GA |5.4.2 GA |2.12.3 GA |1.7.1 GA |2.39.1 GA |7.6.0 GA |4.12-4.16
+
 |1.13.0 |0.0.51 TP |2.11.3 TP |3.14.4 GA |5.2.1 GA |2.11.3 GA |1.6.6 GA |2.37.0 GA |7.6.0 GA |4.12-4.16
 
 |1.12.0 |0.0.51 TP |2.10.3 TP |3.14.0 GA |5.2.1 GA |2.10.3 GA |1.6.0 TP |2.36.0 GA |7.6.0 GA |4.12-4.15
-
-|1.11.0 |0.0.51 TP |NA |3.13.2 GA |5.2.1 GA |2.9.2 GA |1.6.0 TP |2.36.0 GA |7.6.0 GA |4.12-4.14
 |===
 
 * `kam` is the {gitops-title} Application Manager command-line interface (CLI).
++
+[IMPORTANT]
+====
+In {gitops-title} 1.13 or later, the {gitops-title} Application Manager CLI, `kam`, was deprecated and is planned to be removed in a future release. Red{nbsp}Hat will provide bug fixes and support for this feature during the current release lifecycle, but this feature will no longer receive enhancements and will be removed. As an alternative to the {gitops-title} Application Manager CLI, `kam`, you can use the Argo CD CLI that is available from {gitops-title} Operator v1.12.
+====
 * RH SSO is an abbreviation for Red Hat SSO.
 
 // Writer, to update this support matrix, refer to https://spaces.redhat.com/display/GITOPS/GitOps+Component+Matrix
