--- a/modules/supported-benchmark-versions.adoc
+++ b/modules/supported-benchmark-versions.adoc
@@ -13,7 +13,7 @@
 |Benchmark |Supported version
 
 |CIS Benchmarks (Center for Internet Security) for Docker and Kubernetes
-|CIS Kubernetes v1.5.0 and CIS Docker v1.2.0
+|CIS Kubernetes v1.5.0
 
 |HIPAA (Health Insurance Portability and Accountability Act)
 |HIPAA 164
