OBSDOCS-1157: Fix bug in file observability/otel/otel-configuration-of-instrumentation.adoc

--- a/modules/otel-config-instrumentation.adoc
+++ b/modules/otel-config-instrumentation.adoc
@@ -1,6 +1,6 @@
 // Module included in the following assemblies:
 // 
-// * observability/otel/otel-instrumentation.adoc
+// * observability/otel/otel-configuration-of-instrumentation.adoc
 
 :_mod-docs-content-type: REFERENCE
 [id="otel-instrumentation-config_{context}"]
@@ -18,9 +18,9 @@ The {OTELName} Operator only supports the injection mechanism of the instrumenta
 [id="otel-instrumentation-options_{context}"]
 == Instrumentation options
 
-Instrumentation options are specified in the `OpenTelemetryCollector` custom resource.
+Instrumentation options are specified in the `Instrumentation` custom resource.
 
-.Sample `OpenTelemetryCollector` custom resource file
+.Sample `Instrumentation` custom resource file
 [source,yaml]
 ----
 apiVersion: opentelemetry.io/v1alpha1
@@ -101,7 +101,7 @@ spec:
 [id="otel-using-instrumentation-cr-with-service-mesh_{context}"]
 == Using the instrumentation CR with Service Mesh
 
-When using the instrumentation custom resource (CR) with {SMProductName}, you must use the `b3multi` propagator.
+When using the `Instrumentation` custom resource (CR) with {SMProductName}, you must use the `b3multi` propagator.
 
 [id="otel-configuration-of-apache-http-server-auto-instrumentation_{context}"]
 === Configuration of the Apache HTTP Server auto-instrumentation
@@ -118,7 +118,7 @@ When using the instrumentation custom resource (CR) with {SMProductName}, you mu
 
 |`configPath`
 |Location of the Apache HTTP Server configuration.
-|/usr/local/apache2/conf
+|`/usr/local/apache2/conf`
 
 |`env`
 |Environment variables specific to the Apache HTTP Server.
@@ -134,7 +134,7 @@ When using the instrumentation custom resource (CR) with {SMProductName}, you mu
 
 |`version`
 |Apache HTTP Server version.
-|2.4
+|`2.4`
 
 |===
 
@@ -194,7 +194,9 @@ instrumentation.opentelemetry.io/inject-dotnet: "true"
 [source,yaml]
 ----
 instrumentation.opentelemetry.io/inject-go: "true"
+instrumentation.opentelemetry.io/otel-go-auto-target-exe: "/path/to/container/executable" # <1>
 ----
+<1> The `+instrumentation.opentelemetry.io/otel-go-auto-target-exe+` annotation sets the value for the required `OTEL_GO_AUTO_TARGET_EXE` environment variable.
 
 .Additional permissions required for the Go auto-instrumentation in the OpenShift cluster
 [source,yaml]
@@ -280,8 +282,6 @@ instrumentation.opentelemetry.io/inject-nodejs: "true"
 instrumentation.opentelemetry.io/otel-go-auto-target-exe: "/path/to/container/executable"
 ----
 
-The `+instrumentation.opentelemetry.io/otel-go-auto-target-exe+` annotation sets the value for the required `OTEL_GO_AUTO_TARGET_EXE` environment variable.
-
 [id="otel-configuration-of-python-auto-instrumentation_{context}"]
 === Configuration of the Python auto-instrumentation
 
@@ -337,8 +337,9 @@ The instrumentation is run on the first container that is available by default a
 .Pod annotation
 [source,yaml]
 ----
-instrumentation.opentelemetry.io/container-names: "<container_1>,<container_2>"
+instrumentation.opentelemetry.io/container-names: "<container_1>,<container_2>" # <1>
 ----
+<1> This annotation injects a single instrumentation in multiple containers. For instrumenting multiple containers with different instrumentations, see the section "Multi-container pods with multiple instrumentations".
 
 [NOTE]
 ====
