--- a/observability/otel/otel-configuration-of-instrumentation.adoc
+++ b/observability/otel/otel-configuration-of-instrumentation.adoc
@@ -6,9 +6,9 @@ include::_attributes/common-attributes.adoc[]
 
 toc::[]
 
+The {OTELName} Operator uses an `Instrumentation` custom resource (CR) for configuring the instrumentation.
+
 :FeatureName: OpenTelemetry instrumentation injection
 include::snippets/technology-preview.adoc[leveloffset=+1]
-
-The {OTELName} Operator uses a custom resource definition (CRD) file that defines the configuration of the instrumentation.
 
 include::modules/otel-config-instrumentation.adoc[leveloffset=+1]
