Typo check for main/4.17

--- a/rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.adoc
+++ b/rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.adoc
@@ -19,21 +19,21 @@ include::modules/rosa-sdpolicy-am-compute.adoc[leveloffset=+2]
 
 
 [role="_additional-resources"]
-.Additional Resources
+.Additional resources
 
 * xref:../../rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.adoc#rosa-sdpolicy-red-hat-operator_rosa-service-definition[Red{nbsp}Hat Operator Support]
 
 include::modules/rosa-sdpolicy-am-aws-compute-types.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
-.Additional Resources
+.Additional resources
 
 * link:https://aws.amazon.com/ec2/instance-types[AWS Instance Types]
 
 include::modules/rosa-sdpolicy-am-regions-az.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
-.Additional Resources
+.Additional resources
 
 * link:https://docs.aws.amazon.com/general/latest/gr/rosa.html[Red{nbsp}Hat OpenShift Service on AWS endpoints and quotas]
 
