--- a/rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.adoc
+++ b/rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.adoc
@@ -19,14 +19,14 @@ include::modules/rosa-sdpolicy-am-compute.adoc[leveloffset=+2]
 include::snippets/pid-limits.adoc[]
 
 [role="_additional-resources"]
-.Additional Resources
+.Additional resources
 
 * xref:../../rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.adoc#rosa-sdpolicy-red-hat-operator_rosa-service-definition[Red Hat Operator Support]
 
 include::modules/rosa-sdpolicy-am-aws-compute-types.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
-.Additional Resources
+.Additional resources
 
 * link:https://aws.amazon.com/ec2/instance-types[AWS Instance Types]
 
