Typo check for main/4.17

--- a/applications/connecting_applications_to_services/installing-sbo.adoc
+++ b/applications/connecting_applications_to_services/installing-sbo.adoc
@@ -24,6 +24,6 @@ You can install {servicebinding-title} on {product-title} 4.7 and later.
 include::modules/op-installing-sbo-operator-using-the-web-console.adoc[leveloffset=+1]
 
 
-== Additional Resources
+== Additional resources
 
 * xref:../../applications/connecting_applications_to_services/getting-started-with-service-binding.adoc#getting-started-with-service-binding[Getting started with service binding].
