--- a/modules/network-observability-pktdrop-overview.adoc
+++ b/modules/network-observability-pktdrop-overview.adoc
@@ -28,4 +28,4 @@ Other packet drop panels are available to add in *Manage panels*:
 == Types of packet drops
 
 
-See the _Additional Resources_ of this section for more information about enabling and working with packet drop tracking.
+See the _Additional resources_ of this section for more information about enabling and working with packet drop tracking.
