Added a use case to include blockedImages in imageSet config examples.

--- a/modules/oc-mirror-image-set-config-examples.adoc
+++ b/modules/oc-mirror-image-set-config-examples.adoc
@@ -247,3 +247,23 @@ mirror:
  additionalImages:
    - name: registry.redhat.io/ubi9/ubi:latest
 ----
+
+[id="oc-mirror-image-set-examples-blocked-images_{context}"]
+== Use case: Including `blockedImages`
+
+The following `ImageSetConfiguration` file excludes the images that return `manifest unknown errors`.
+
+This example also shows how to use `blockedImages` in the `imageSetConfiguration` to skip mirroring an image that fails to mirror due to `unknown manifest error`.
+
+.Example `ImageSetConfiguration` file
+[source,yaml,subs=attributes+]
+----
+apiVersion: mirror.openshift.io/v2alpha1
+kind: ImageSetConfiguration
+mirror:
+  additionalImages:
+    - name: registry.redhat.io/ubi8/ubi:latest
+    - name: registry.redhat.io/ubi8/ubi:fake
+  blockedImages:
+    - name: registry.redhat.io/ubi8/ubi:fake
+----
