--- a/disconnected/updating/mirroring-image-repository.adoc
+++ b/disconnected/updating/mirroring-image-repository.adoc
@@ -39,6 +39,11 @@ The following steps outline the high-level workflow on how to mirror images to a
 
 .. Repeat these steps as needed to update your mirror registry.
 
+[IMPORTANT]
+====
+The `oc adm catalog mirror` and `oc adm release mirror` commands are being deprecated as their features move to `oc-mirror`. These commands will remain in the `oc` codebase but will be marked as deprecated until `oc-mirror` is fully implemented and tested.
+====
+
 Compared to using the `oc adm release mirror` command, the oc-mirror plugin has the following advantages:
 
 * It can mirror content other than container images.
