Fixed Documentation Issue for Task Management Commands

--- a/modules/op-tkn-task-management.adoc
+++ b/modules/op-tkn-task-management.adoc
@@ -17,19 +17,19 @@ $ tkn task -h
 == task delete
 Delete a task.
 
-.Example: Delete `mytask1` and `mytask2` tasks from a namespace
+.Example: Delete tasks from a namespace
 [source,terminal]
 ----
-$ tkn task delete mytask1 mytask2 -n myspace
+$ tkn task delete <task_name_1> <task_name_2> -n <namespace_name>
 ----
 
 == task describe
 Describe a task.
 
-.Example: Describe the `mytask` task in a namespace
+.Example: Describe a task in a namespace
 [source,terminal]
 ----
-$ tkn task describe mytask -n myspace
+$ tkn task describe <task_name> -n <namespace_name>
 ----
 
 == task list
@@ -38,23 +38,23 @@ List tasks.
 .Example: List all the tasks in a namespace
 [source,terminal]
 ----
-$ tkn task list -n myspace
+$ tkn task list -n <namespace_name>
 ----
 
 == task logs
 Display task logs.
 
-.Example: Display logs for the `mytaskrun` task run of the `mytask` task
+.Example: Display logs for a task run of a task
 [source,terminal]
 ----
-$ tkn task logs mytask mytaskrun -n myspace
+$ tkn task logs <task_name> <task_run_name> -n <namespace_name>
 ----
 
 == task start
 Start a task.
 
-.Example: Start the `mytask` task in a namespace
+.Example: Start a task in a namespace
 [source,terminal]
 ----
-$ tkn task start mytask -s <ServiceAccountName> -n myspace
+$ tkn task start <task_name> -s <service_account_name> -n <namespace_name>
 ----
